# multi_tab_text_editor

./: Cargo.toml  README.md
src/: config.rs  icons.rs  main.rs
src/editor/: components.rs  icons.rs  mod.rs
src/editor_theme/: colors.rs  mod.rs
