[package]
name = "multi_tab_text_editor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iced = { version = "0.12", features = ["tokio", "highlighter"] }
iced_aw = { version = "0.9", default-features = false, features = ["card", "menu", "quad"] }
tokio = { version = "1.38", features = ["full"] }
rfd = "0.14"