[package]
name = "multi_tab_text_editor"
description = "A simple multi-tab text editor"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/theboiboi8/multi_tab_text_editor"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
iced = { version = "0.12", features = ["tokio", "highlighter"] }
iced_aw = { version = "0.9", default-features = false, features = ["card", "menu", "quad", "modal"] }
tokio = { version = "1.39", features = ["full"] }
rfd = "0.14"
opener = "0.7.1"